fix bug of constline label shifting

--- a/core/src/main/web/outputdisplay/bko-plot/bko-plot.css
+++ b/core/src/main/web/outputdisplay/bko-plot/bko-plot.css
@@ -120,7 +120,6 @@
   margin: 0px 5px;
   vertical-align: middle;
   display: inline-block;
-  bottom: 0px;
 }
 
 .plot-legendcheckbox {
